# quiq

./: CLAUDE.md  README.md  justfile
cli/: Cargo.toml
cli/src/: main.rs  report_cuke.rs  report_junit.rs
doc/: plan.md  quiq-initial-concept.md
doc/adr/: 0001-record-architecture-decisions.md
fixtures/merkle/: .gitignore  README.md  build.gradle.kts  justfile  settings.gradle.kts
fixtures/merkle/src/acceptance/kotlin/merkle/: CucumberRunner.kt
fixtures/merkle/src/acceptance/kotlin/merkle/steps/: GivenSteps.kt  ProofSteps.kt  RootSteps.kt  ScenarioContext.kt  VerifySteps.kt
fixtures/merkle/src/acceptance/resources/features/: proof.feature  root.feature  verify.feature
fixtures/merkle/src/main/kotlin/merkle/: Main.kt
fixtures/merkle/src/main/kotlin/merkle/adapters/cli/: CliInputAdapter.kt
fixtures/merkle/src/main/kotlin/merkle/adapters/output/: StdoutOutputAdapter.kt
fixtures/merkle/src/main/kotlin/merkle/application/: BuildTreeUseCase.kt  GenerateProofUseCase.kt  VerifyProofUseCase.kt
fixtures/merkle/src/main/kotlin/merkle/domain/: MerkleHash.kt  MerkleProof.kt  MerkleTree.kt
fixtures/merkle/src/test/kotlin/merkle/application/: BuildTreeUseCaseTest.kt  GenerateProofUseCaseTest.kt  VerifyProofUseCaseTest.kt
fixtures/merkle/src/test/kotlin/merkle/domain/: MerkleHashTest.kt  MerkleProofTest.kt  MerkleTreeTest.kt
src/: main.rs
