[package]
name = "quiq"
version = "0.1.1"
edition = "2021"
description = "A TUI test runner that auto-detects your project and runs tests with beautiful results"
license = "MIT"
homepage = "https://github.com/jimbarritt/quiq"
repository = "https://github.com/jimbarritt/quiq"
keywords = ["tui", "test-runner", "testing", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[[bin]]
name = "quiq"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
